--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     height: 100vh;
     line-height: 1.5rem;
+    
 }
 
 nav {
@@ -51,6 +52,7 @@ main {
     height: 100vh;
     overflow-y: auto;
     padding: 2rem;
+    margin-bottom:3rem;
 }
 
 .main-section header {
