--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
     flex-direction: column;
     height: 100vh;
     line-height: 1.5rem;
-    
+    margin: 0 0 5rem 0;
+    overflow-y: hidden;
 }
 
 nav {
@@ -52,7 +53,6 @@ main {
     height: 100vh;
     overflow-y: auto;
     padding: 2rem;
-    margin-bottom:3rem;
 }
 
 .main-section header {
@@ -83,10 +83,14 @@ code {
     font-family: monospace;
 }
 
+#Reference {
+    padding-bottom: 5rem;
+}
+
 @media (min-width: 640px) {
     body {
         flex-direction: row;
-        overflow-y: hidden
+        overflow-y: hidden;
     }
     #navbar {
         max-height: 100vh;
